@@ -14,7 +14,6 @@
 package org.bonitasoft.engine.service.impl;
 
 import java.io.IOException;
-import java.lang.reflect.InvocationTargetException;
 
 import org.bonitasoft.engine.commons.exceptions.SBonitaException;
 import org.bonitasoft.engine.exception.BonitaHomeConfigurationException;
@@ -22,6 +21,7 @@ import org.bonitasoft.engine.exception.BonitaHomeNotSetException;
 import org.bonitasoft.engine.home.BonitaHomeServer;
 import org.bonitasoft.engine.service.APIAccessResolver;
 import org.bonitasoft.engine.service.PlatformServiceAccessor;
+import org.bonitasoft.engine.service.ServiceAccessor;
 import org.bonitasoft.engine.service.TenantServiceAccessor;
 import org.bonitasoft.engine.sessionaccessor.SessionAccessor;
 
@@ -47,46 +47,51 @@ public class ServiceAccessorFactory {
         return INSTANCE;
     }
 
+    public synchronized ServiceAccessor createServiceAccessor() throws BonitaHomeConfigurationException, IOException,
+            ReflectiveOperationException {
+        return getServiceAccessors().getServiceAccessor();
+    }
+
+    /**
+     * @deprecated since 9.0.0, use {@link #createServiceAccessor()} instead
+     */
+    @Deprecated(forRemoval = true, since = "9.0.0")
     public synchronized PlatformServiceAccessor createPlatformServiceAccessor()
-            throws BonitaHomeNotSetException, InstantiationException,
-            IllegalAccessException, ClassNotFoundException, IOException, BonitaHomeConfigurationException {
+            throws BonitaHomeNotSetException, IOException, BonitaHomeConfigurationException,
+            ReflectiveOperationException {
         return getServiceAccessors().getPlatformServiceAccessor();
     }
 
     private synchronized ServiceAccessors getServiceAccessors() throws BonitaHomeConfigurationException, IOException,
-            ClassNotFoundException, IllegalAccessException, InstantiationException {
+            ReflectiveOperationException {
         if (serviceAccessors == null) {
-            serviceAccessors = (ServiceAccessors) loadClassFromPropertyName(SERVICE_ACCESSORS).newInstance();
+            serviceAccessors = (ServiceAccessors) loadClassFromPropertyName(SERVICE_ACCESSORS).getDeclaredConstructor()
+                    .newInstance();
         }
         return serviceAccessors;
     }
 
+    /**
+     * @deprecated since 9.0.0, use {@link #createServiceAccessor()} instead
+     */
+    @Deprecated(forRemoval = true, since = "9.0.0")
     public TenantServiceAccessor createTenantServiceAccessor()
             throws SBonitaException, BonitaHomeNotSetException, IOException,
-            BonitaHomeConfigurationException, NoSuchMethodException, InstantiationException, IllegalAccessException,
-            InvocationTargetException,
-            ClassNotFoundException {
+            BonitaHomeConfigurationException, ReflectiveOperationException {
         return getServiceAccessors().getTenantServiceAccessor();
     }
 
     public SessionAccessor createSessionAccessor()
-            throws BonitaHomeNotSetException, InstantiationException, IllegalAccessException,
-            ClassNotFoundException, IOException, BonitaHomeConfigurationException {
-        return createPlatformInitServiceAccessor().getSessionAccessor();
-    }
-
-    private PlatformInitServiceAccessor createPlatformInitServiceAccessor()
-            throws IOException, BonitaHomeConfigurationException, InstantiationException, IllegalAccessException,
-            ClassNotFoundException {
-        return getServiceAccessors().getPlatformInitServiceAccessor();
+            throws BonitaHomeNotSetException, IOException, BonitaHomeConfigurationException,
+            ReflectiveOperationException {
+        return createServiceAccessor().getSessionAccessor();
     }
 
     public synchronized APIAccessResolver createAPIAccessResolver()
-            throws BonitaHomeNotSetException, IOException, BonitaHomeConfigurationException,
-            InstantiationException, IllegalAccessException, ClassNotFoundException {
+            throws IOException, BonitaHomeConfigurationException, ReflectiveOperationException {
         if (apiAccessResolver == null) {
             apiAccessResolver = (APIAccessResolver) loadClassFromPropertyName(API_ACCESS_RESOLVER_CLASS_NAME)
-                    .newInstance();
+                    .getDeclaredConstructor().newInstance();
         }
         return apiAccessResolver;
     }
