@@ -15,11 +15,8 @@ package org.bonitasoft.console.common.server.utils;
 
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Properties;
-import java.util.stream.Collectors;
 
 import org.bonitasoft.console.common.server.preferences.properties.ConfigurationFilesManager;
 import org.bonitasoft.engine.api.ApiAccessType;
@@ -90,7 +87,7 @@ public class PlatformManagementUtils {
             throws ClassNotFoundException, IllegalAccessException, InvocationTargetException, NoSuchMethodException,
             InstantiationException {
         final Class<?> api = Class.forName("org.bonitasoft.engine.LocalLoginMechanism");
-        return (PlatformSession) api.getDeclaredMethod("login").invoke(api.newInstance());
+        return (PlatformSession) api.getDeclaredMethod("login").invoke(api.getDeclaredConstructor().newInstance());
     }
 
     void platformLogout(final PlatformSession platformSession) throws BonitaException {
@@ -99,10 +96,7 @@ public class PlatformManagementUtils {
     }
 
     private void retrieveTenantsConfiguration(final PlatformAPI platformAPI) throws IOException {
-        final Map<Long, Map<String, byte[]>> clientTenantConfigurations = platformAPI.getClientTenantConfigurations();
-        for (final Entry<Long, Map<String, byte[]>> tenantConfiguration : clientTenantConfigurations.entrySet()) {
-            configurationFilesManager.setTenantConfigurationFiles(tenantConfiguration.getValue());
-        }
+        configurationFilesManager.setTenantConfigurationFiles(platformAPI.getClientTenantConfigurations());
     }
 
     private void retrievePlatformConfiguration(final PlatformAPI platformAPI) throws IOException {
@@ -130,30 +124,20 @@ public class PlatformManagementUtils {
     }
 
     /**
-     * Long => tenantId
      * String => configuration file name
-     * Properties => content of the configuration file
+     * byte[] => content of the configuration file
      */
-    public Map<Long, Map<String, Properties>> getTenantConfigurations() throws IOException {
+    public Map<String, byte[]> readTenantConfigurationsFromEngine() {
         try {
             final PlatformSession platformSession = platformLogin();
             try {
-                Map<Long, Map<String, byte[]>> clientTenantConfigurations = getPlatformAPI(platformSession)
-                        .getClientTenantConfigurations();
-                Map<Long, Map<String, Properties>> clientTenantConfigurationProperties = new HashMap<>();
-                for (Entry<Long, Map<String, byte[]>> entry : clientTenantConfigurations.entrySet()) {
-                    final Map<String, byte[]> map = entry.getValue();
-                    clientTenantConfigurationProperties.put(entry.getKey(),
-                            map.entrySet().stream().collect(Collectors.toMap(
-                                    Entry::getKey,
-                                    v -> ConfigurationFilesManager.getProperties(v.getValue()))));
-                }
-                return clientTenantConfigurationProperties;
+                return getPlatformAPI(platformSession).getClientTenantConfigurations();
             } finally {
                 platformLogout(platformSession);
             }
-        } catch (BonitaException e) {
-            throw new IOException(e);
+        } catch (BonitaException | IOException e) {
+            LOGGER.error("Cannot retrieve tenant configurations", e);
+            return Collections.emptyMap();
         }
     }
 
